test/positive/next05.cfr
// behavioral clafer test for next or X temporal operator

a
 b ?
  c ?
  [X !b]
  [F X b]


// Rao: Working as expected, no issues.
