test/negative/unknown-keyword01.cfr
// Negative behavioral clafer test for unknown operator 

a
 b ?
  c ?
 [temp c]

// Rao: 2014-08-04: This should fail as 'temp' is not a recongnised keyword.   
// but it is parsing correctly, which is an error.

